# rust_ml

./: Cargo.toml  README.md
.github/workflows/: create_cargo_cache.yml  rust_ci.yml
src/: input_schema.rs  lib.rs  main.rs  preprocess_service.rs  train_service.rs  validate.rs
tests/: test_main.rs
