[package]
name = "rust_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
csv = "1.2.2"
ndarray = "0.15.6"
polars = { version = "0.30.0", features = ["ndarray"]}
polars-core = "0.30.0"
rustfmt = "0.10.0"
smartcore = "0.2.0"
